--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -42,7 +42,7 @@
                 android:paddingTop="24dp">
 
                 <TextView
-                    style="@style/TextAppearance.AppCompat.Body1"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="@dimen/activity_horizontal_margin"
@@ -50,8 +50,8 @@
 
                 <android.support.v7.widget.CardView
                     android:id="@+id/info_card"
-                    cardCornerRadius="20dp"
-                    cardElevation="20dp"
+                    cardCornerRadius="2dp"
+                    cardElevation="2dp"
                     cardUseCompatPadding="true"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -67,11 +67,11 @@
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="@dimen/activity_horizontal_margin"
                             android:layout_marginTop="@dimen/activity_horizontal_margin"
-                            android:text="User Info"
+                            android:text="@string/user_info"
                             android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
 
                         <TextView
-                            style="@style/TextAppearance.AppCompat.Body1"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="@string/profile_name_phone_text"/>
@@ -83,7 +83,7 @@
                             android:layout_marginBottom="8dp"
                             android:layout_marginTop="8dp">
 
-                            <android.support.v7.widget.AppCompatEditText
+                            <EditText
                                 android:id="@+id/name_edit"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
@@ -100,7 +100,7 @@
                             android:layout_marginBottom="8dp"
                             android:layout_marginTop="8dp">
 
-                            <android.support.v7.widget.AppCompatEditText
+                            <EditText
                                 android:id="@+id/phone_edit"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
@@ -115,8 +115,8 @@
 
                 <android.support.v7.widget.CardView
                     android:id="@+id/prefs_card"
-                    cardCornerRadius="20dp"
-                    cardElevation="20dp"
+                    cardCornerRadius="2dp"
+                    cardElevation="2dp"
                     cardUseCompatPadding="true"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -131,16 +131,16 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="@dimen/activity_horizontal_margin"
-                            android:text="Preferences"
+                            android:text="@string/preferences"
                             android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
 
                         <TextView
-                            style="@style/TextAppearance.AppCompat.Body1"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="@dimen/activity_horizontal_margin"
                             android:layout_marginTop="@dimen/activity_horizontal_margin"
-                            android:text="Have you ever owned any of these?"/>
+                            android:text="@string/ever_owned"/>
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -152,25 +152,25 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
-                                android:text="Nexus"/>
+                                android:text="@string/nexus"/>
 
                             <CheckBox
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
-                                android:text="Android TV"/>
+                                android:text="@string/android_tv"/>
 
                             <CheckBox
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
-                                android:text="Android Wear"/>
+                                android:text="@string/android_wear"/>
 
                         </LinearLayout>
 
 
                         <TextView
-                            style="@style/TextAppearance.AppCompat.Body1"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="@dimen/activity_horizontal_margin"
@@ -216,7 +216,7 @@
                         </RadioGroup>
 
                         <TextView
-                            style="@style/TextAppearance.AppCompat.Body1"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="@dimen/activity_horizontal_margin"
@@ -230,7 +230,7 @@
                             android:entries="@array/country_arrays"/>
 
                         <TextView
-                            style="@style/TextAppearance.AppCompat.Body1"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="@dimen/activity_horizontal_margin"
