Profile picture feature Take image from Camera or choose from gallery

--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -261,9 +261,10 @@
                         android:layout_height="wrap_content"
                         android:gravity="center">
 
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                        <de.hdodenhof.circleimageview.CircleImageView
+                            android:id="@+id/profile_image_view"
+                            android:layout_width="100dp"
+                            android:layout_height="100dp"
                             android:src="@drawable/ic_account_lg"/>
 
                         <Button
