fixed some deprecated methods

--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -84,7 +84,7 @@
                             android:layout_marginBottom="8dp"
                             android:layout_marginTop="8dp">
 
-                            <EditText
+                            <android.support.v7.widget.AppCompatEditText
                                 android:id="@+id/name_edit"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
@@ -101,7 +101,7 @@
                             android:layout_marginBottom="8dp"
                             android:layout_marginTop="8dp">
 
-                            <EditText
+                            <android.support.v7.widget.AppCompatEditText
                                 android:id="@+id/phone_edit"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
