--- a/app/src/main/res/layout/fragment_prod_list.xml
+++ b/app/src/main/res/layout/fragment_prod_list.xml
@@ -20,22 +20,22 @@
         android:layout_height="350dp"
         android:background="@color/amber_500"
         android:clipToPadding="true"
-        app:layout_behavior="android.support.design.widget.BottomSheetBehavior" >
+        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingRight="32dp"
-            android:paddingLeft="16dp"
-            android:paddingTop="16dp"
-            android:paddingBottom="16dp"
-            android:text="@string/android_supports_vectors"
-            android:textSize="18sp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingBottom="16dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="32dp"
+                android:paddingTop="16dp"
+                android:text="@string/android_supports_vectors"
+                android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
 
             <ImageView
                 android:layout_width="wrap_content"
