Updates to current library versions
This updates the versions, and also refactors to remove a vector I was
using incorrectly.

--- a/app/src/main/res/layout/fragment_prod_list.xml
+++ b/app/src/main/res/layout/fragment_prod_list.xml
@@ -41,7 +41,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                app:srcCompat="@drawable/bugdroid"
+                app:srcCompat="@drawable/vct_bugdroid"
                 tools:ignore="MissingPrefix"/>
         </LinearLayout>
 
