--- a/app/src/main/res/layout/dialog_picture.xml
+++ b/app/src/main/res/layout/dialog_picture.xml
@@ -12,7 +12,7 @@
         android:layout_margin="16dp"
         android:text="@string/dialog_photo_text"/>
 
-    <android.support.v7.widget.SwitchCompat
+    <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/photo_pref_switch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
