--- a/app/src/main/res/layout/stag_list_item.xml
+++ b/app/src/main/res/layout/stag_list_item.xml
@@ -7,7 +7,7 @@
     android:layout_marginLeft="8dp"
     android:layout_marginRight="8dp">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/item_card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -55,5 +55,5 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
 
         </RelativeLayout>
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 </FrameLayout>
