--- a/app/src/main/res/layout/fragment_prod_list.xml
+++ b/app/src/main/res/layout/fragment_prod_list.xml
@@ -11,6 +11,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview"
         xmlns:android="http://schemas.android.com/apk/res/android"
+        android:paddingBottom="48dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
