Add new tests, and fix existing ones
Added some additional test coverage, and extended the tests a bit

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -70,6 +70,7 @@
                     android:layout_height="wrap_content">
 
                     <TextView
+                        android:id="@+id/favorite_title"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/favorite_title"
